# esp32-s3-lcd-jig

./: README.md
firmware/components/esp32-s3-hal-rgb/: CMakeLists.txt  component.mk
firmware/components/esp32-s3-hal-rgb/bsp/: bsp.h
firmware/components/esp32-s3-hal-rgb/common/: def.h
firmware/components/esp32-s3-hal-rgb/common/hw/include/: battery.h  i2c.h  i2c_exp.h  lcdc.h  mixer.h
firmware/components/esp32-s3-hal-rgb/common/hw/include/lcd/: st7701.h
firmware/components/esp32-s3-hal-rgb/common/hw/src/: cli.c
firmware/components/esp32-s3-hal-rgb/hw/: hw.c  hw.h  hw_def.h
firmware/components/esp32-s3-hal-rgb/hw/driver/: adc.c  audio.c  battery.c  gpio.c  i2c.c  i2c_exp.c  i2s.c  lcd.c  lcdc.c  lvgl.c  pwm.c  touch.c
firmware/components/esp32-s3-hal-rgb/hw/driver/lcd/: st7701.c
firmware/components/esp32-s3-hal-rgb/hw/driver/lvgl/: lv_port_disp.c  lv_port_indev.c
firmware/components/esp32-s3-hal-rgb/hw/driver/touch/: ft6236.c  gt911.c
firmware/components/esp32-s3-hal-rgb/lib/: lv_conf.h
firmware/project/lcd-jig-rgb/: CMakeLists.txt  lcd-jig-rgb.code-workspace  sdkconfig
firmware/project/lcd-jig-rgb/main/: CMakeLists.txt
firmware/project/lcd-jig-rgb/main/ap/: ap.cpp
firmware/project/lcd-jig-rgb/main/ap/lvgl/: CMakeLists.txt  filelist.txt  ui.c  ui.h
firmware/project/lcd-jig-rgb/main/ap/lvgl/fonts/: ui_font_Font1.c  ui_font_Font20.c
firmware/project/lcd-jig-rgb/main/ap/lvgl/screens/: ui_Screen1.c  ui_Screen2.c
